# Captchanova

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
captchanova/: fonts.py  main.py
